# Open2Deep

./: .gitignore  AGENTS.md  AGENTS_O2D.md  LICENSE  README.md  mcp_servers.example.json  openproject_agent.py  projects.py  pyproject.toml  work_packages.py
custom_tools/: example_echo.py
openproject_automation/: __init__.py  agent.py  config.py  custom_tools.py  llm.py  mcp_loader.py  multimodal_tools.py  o2d_cli.py  openproject_client.py  openproject_tools.py  ordo_cli.py
skills/openproject/: SKILL.md
